added jquery file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="jquery-3.6.4.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <!-- TODO: Create HTML elements for Twitter mockup inside body -->
@@ -44,7 +46,8 @@
       </div>
 
       <div id="content-center" role="main">
-        <div id="tweet">
+        insert tweet divs here <br/>
+        <!-- <div id="tweet">
           <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
           <div class="tweet-usertag">
             <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
@@ -98,7 +101,7 @@
               </p>
             </div>
           </div> 
-        </div>
+        </div> -->
       </div>
       <div id="content-right">
         <div id="whoToFollow"><span style="font-size: large"><strong>Who to follow</strong></span>
