--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
       </div>
 
       <div id="content-center" role="main">
+        <div style="display:flex">
+          <input type="search" id="search-box" placeholder="Search tweets" style="display:inline-block; width:100%; height:100%; margin-right:10px">
+          <label>Pause Tweets <input type="checkbox" id="feedRefresh" value="1"></label>
+        </div>
+        
         insert tweet divs here <br/>
         <!-- <div id="tweet">
           <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
