added displaying tweets code snippet from lab

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
           <input type="search" id="search-box" placeholder="Search tweets" style="display:inline-block; width:100%; height:100%; margin-right:10px">
           <label>Pause Tweets <input type="checkbox" id="feedRefresh" value="1"></label>
         </div>
-        
-        insert tweet divs here <br/>
+        <div id="tweet-container">
+          
+        </div>
         <!-- <div id="tweet">
           <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
           <div class="tweet-usertag">
