added pulling random tweets into middle

--- a/index.html
+++ b/index.html
@@ -46,64 +46,21 @@
       </div>
 
       <div id="content-center" role="main">
-        <div style="display:flex">
-          <input type="search" id="search-box" placeholder="Search tweets" style="display:inline-block; width:100%; height:100%; margin-right:10px">
+        <div style="display:flex; padding-bottom: 10px; border-bottom: 2px solid #e6ecf0;">
+          <input type="search" id="search-box" placeholder="Search tweets">
           <label>Pause Tweets <input type="checkbox" id="feedRefresh" value="1"></label>
         </div>
         <div id="tweet-container">
-          
+
         </div>
-        <!-- <div id="tweet">
+        <!-- LEAVING HERE TO REFERENCE HOW WE DID A TWEET IN LAB 1
+          <div id="tweet">
           <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
           <div class="tweet-usertag">
             <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
             <div class="tweet-description">
               <p>I'm taking this class called CS110 and the
                 TAs are all so <strong>cool!</strong>
-              </p>
-            </div>
-          </div> 
-        </div>
-        <div id="tweet">
-          <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
-          <div class="tweet-usertag">
-            <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
-            <div class="tweet-description">
-              <p>It's 2007. You got home from elementary school.
-                Your mom has pizza bagels in the oven. Ratatouille is in theaters. Life is good
-              </p>
-            </div>
-          </div> 
-        </div>
-        <div id="tweet">
-          <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
-          <div class="tweet-usertag">
-            <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
-            <div class="tweet-description">
-              <p>
-                Let's make some pasta!
-              </p>
-            </div>
-          </div> 
-        </div>
-        <div id="tweet">
-          <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
-          <div class="tweet-usertag">
-            <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
-            <div class="tweet-description">
-              <p>
-                Let's make some pasta!
-              </p>
-            </div>
-          </div> 
-        </div>
-        <div id="tweet">
-          <img src="./images/ratatouille.jpg" alt="Remy tweet Profile Picture">
-          <div class="tweet-usertag">
-            <p><strong>Remy</strong> <span style="color: gray">@remy Nov 19</span></p>
-            <div class="tweet-description">
-              <p>
-                Let's make some pasta!
               </p>
             </div>
           </div> 
